UCF-APR2.4/ftr main/force-app/main/default/objects/EsbEvent__e/EsbEvent__e.object-meta.xml
<CustomObject>
    <label>EsbEvent</label>
    <pluralLabel>EsbEvents</pluralLabel>
</CustomObject>