UCF-APR2.4/ftr main/force-app/main/default/objects/EsbEvent__e/fields/correlationId__c.field-meta.xml
<CustomField>
    <fullName>correlationId__c</fullName>
    <label>correlationId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>