UCF-APR2.4/ftr main/force-app/main/default/objects/EsbEvent__e/fields/data__c.field-meta.xml
<CustomField>
    <fullName>data__c</fullName>
    <label>data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>