UCF-APR2.4/ftr main/force-app/main/default/objects/EsbEvent__e/fields/domain__c.field-meta.xml
<CustomField>
    <fullName>domain__c</fullName>
    <label>domain</label>
    <length>25</length>
    <type>Text</type>
</CustomField>