UCF-APR2.4/ftr main/force-app/main/default/objects/EsbEvent__e/fields/expiration__c.field-meta.xml
<CustomField>
    <fullName>expiration__c</fullName>
    <label>expiration</label>
    <length>10</length>
    <type>Text</type>
</CustomField>