UCF-APR2.4/ftr main/force-app/main/default/objects/EsbEvent__e/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>