UCF-APR2.4/ftr main/force-app/main/default/objects/EsbEvent__e/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>