UCF-APR2.4/ftr main/force-app/main/default/objects/EsbEvent__e/fields/priority__c.field-meta.xml
<CustomField>
    <fullName>priority__c</fullName>
    <label>priority</label>
    <length>10</length>
    <type>Text</type>
</CustomField>