UCF-APR2.4/ftr main/force-app/main/default/objects/EsbEvent__e/fields/property__c.field-meta.xml
<CustomField>
    <fullName>property__c</fullName>
    <label>property</label>
    <length>25</length>
    <type>Text</type>
</CustomField>