UCF-APR2.4/ftr main/force-app/main/default/objects/EsbEvent__e/fields/source__c.field-meta.xml
<CustomField>
    <fullName>source__c</fullName>
    <label>source</label>
    <length>25</length>
    <type>Text</type>
</CustomField>