UCF-APR2.4/ftr main/force-app/main/default/objects/EsbEvent__e/fields/subtype__c.field-meta.xml
<CustomField>
    <fullName>subtype__c</fullName>
    <label>subtype</label>
    <length>25</length>
    <type>Text</type>
</CustomField>