UCF-APR2.4/ftr main/force-app/main/default/objects/EsbEvent__e/fields/timestamp__c.field-meta.xml
<CustomField>
    <fullName>timestamp__c</fullName>
    <label>timestamp</label>
    <length>25</length>
    <type>Text</type>
</CustomField>